--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -21,7 +21,7 @@
             @*<label class="lblStyle"><b class="lblpsw">Password</b></label>*@
             <input id="txtPassword" type="password" placeholder="Password">
             <br />
-            <button type="button" value="Login" onClick="UserLogin()"/>Login
+            <button id="btnLogin" type="button" value="Login" onClick="UserLogin()"/>Login
 
         </div>
         <div class="copyright-1">© 2017 Alpha Group Co., Ltd. All Rights Reserved</div>
