--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -254,10 +254,10 @@
                                                                     <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtQty" class="Quantity Number text-size80 textright" placeholder="0" onblur="addCommas()" onchange="CalSum()" />
+                                                                    <input type="text" id="txtQty" class="Quantity text-size80 textright" placeholder="0" onchange="CalSum()" />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitPrice" class="Price Number text-size130 textright" placeholder="0" onblur="addCommas()" onchange="CalSum()" />
+                                                                    <input type="text" id="txtUnitPrice" class="Price text-size130 textright" placeholder="0" onchange="CalSum()" />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
@@ -287,10 +287,10 @@
                                                                     <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright" />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtQty" class="Quantity Number text-size80 textright" onblur="addCommas()" onchange="CalSum()" />
+                                                                    <input type="text" id="txtQty" class="Quantity text-size80 textright" onchange="CalSum()" />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitPrice" class="Price Number text-size130 textright" onblur="addCommas()" onchange="CalSum()" />
+                                                                    <input type="text" id="txtUnitPrice" class="Price text-size130 textright" onchange="CalSum()" />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
@@ -359,10 +359,10 @@
                                                                     <select class="unitSelect"></select>
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtQty" name="Qty" class="Quantity Number text-size80" onchange="CalSumExpense()">
+                                                                    <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price Number text-size130" onchange="CalSumExpense()">
+                                                                    <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
@@ -392,10 +392,10 @@
                                                                     <select class="unitSelect"></select>
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtQty" name="Qty" class="Quantity Number text-size80" onchange="CalSumExpense()">
+                                                                    <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price Number text-size130" onchange="CalSumExpense()">
+                                                                    <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
@@ -685,7 +685,7 @@
                                                                 <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright">
+                                                                <input type="text" id="txtAmount" class="Amount2 text-size180 textright">
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -708,7 +708,7 @@
                                                                 <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright">
+                                                                <input type="text" id="txtAmount" class="Amount2 text-size180 textright">
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -759,7 +759,7 @@
                                                                 <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright">
+                                                                <input type="text" id="txtAmount" class="Amount3 text-size165 textright">
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -785,7 +785,7 @@
                                                                 <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright">
+                                                                <input type="text" id="txtAmount" class="Amount3 text-size165 textright">
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -836,7 +836,7 @@
                                                                 <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright">
+                                                                <input type="text" id="txtAmount" class="Amount4 text-size165 textright">
                                                             </td>
                                                             <td>
                                                                 <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -862,7 +862,7 @@
                                                                 <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright">
+                                                                <input type="text" id="txtAmount" class="Amount4 text-size165 textright">
                                                             </td>
                                                             <td>
                                                                 <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
