--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -221,10 +221,10 @@
                                                             <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtQty" class="Quantity Number text-size80 textright" placeholder="0" onchange="CalSum()" />
+                                                            <input type="text" id="txtQty" class="Quantity text-size80 textright" onchange="CalSum()" />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitPrice" class="Price Number text-size130 textright" placeholder="0" onchange="CalSum()" />
+                                                            <input type="text" id="txtUnitPrice" class="Price text-size130 textright" onchange="CalSum()" />
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
@@ -257,10 +257,10 @@
                                                             <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright"/>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtQty" class="Quantity Number text-size80 textright" onchange="CalSum()" />
+                                                            <input type="text" id="txtQty" class="Quantity text-size80 textright" onchange="CalSum()" />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitPrice" class="Price Number text-size130 textright" onchange="CalSum()" />
+                                                            <input type="text" id="txtUnitPrice" class="Price text-size130 textright" onchange="CalSum()" />
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
@@ -333,10 +333,10 @@
                                                             <select class="unitSelect"></select>
                                                         </td>
                                                         <td> 
-                                                            <input type="text" id="txtQty" name="Qty" class="Quantity Number text-size80" onchange="CalSumExpense()">
+                                                            <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price Number text-size130" onchange="CalSumExpense()">
+                                                            <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
@@ -368,10 +368,10 @@
                                                             <select class="unitSelect"></select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtQty" name="Qty" class="Quantity Number text-size80" onchange="CalSumExpense()">
+                                                            <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price Number text-size130" onchange="CalSumExpense()">
+                                                            <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
@@ -684,7 +684,7 @@
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright" onchange="convertFloat()">
+                                                        <input type="text" id="txtAmount" class="Amount2 text-size180 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowSaleOrder row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -710,7 +710,7 @@
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright" onchange="convertFloat()">
+                                                        <input type="text" id="txtAmount" class="Amount2 text-size180 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowSaleOrder row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -764,7 +764,7 @@
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright" onchange="convertFloat()">
+                                                        <input type="text" id="txtAmount" class="Amount3 text-size165 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowInvoice row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -793,7 +793,7 @@
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright" onchange="convertFloat()">
+                                                        <input type="text" id="txtAmount" class="Amount3 text-size165 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowInvoice row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -847,7 +847,7 @@
                                                         <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright" onchange="convertFloat()">
+                                                        <input type="text" id="txtAmount" class="Amount4 text-size165 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowReceipt row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -876,7 +876,7 @@
                                                         <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright" onchange="convertFloat()">
+                                                        <input type="text" id="txtAmount" class="Amount4 text-size165 textright" onchange="convertFloat()">
                                                     </td>
                                                     <td>
                                                         <div class="clone-1"><img class="cloneRowReceipt row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
