--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -85,15 +85,15 @@
             </ul>
             <ul class="attachgrid">
                 <li>
-                    <table class="barattach">
+                    @*<table class="barattach">
                         <tr>
                             <td>
 
                                 <div class="topicattach"><a href="#"><img src="@Url.Content("~/Images/attachments2.png")" /></a></div>
                             </td>
                         </tr>
-                    </table>
-                    <table class="example-2" cellspacing="0">
+                    </table>*@
+                    @*<table class="example-2" cellspacing="0">
                         <thead class="theader">
                             <tr>
                                 <th>No.</th>
@@ -172,7 +172,7 @@
                                 </td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table>*@
                 </li>
                 <br />
             </ul>
