--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -98,10 +98,10 @@
                             <li id="mnCarlendar" class="menuli">
                                 <div class="menua">
                                     <div class="menutext">
-                                        @Html.ActionLink("Products", "IndexProducts", "Products")
+                                        @Html.ActionLink("Tools & Machines", "IndexProducts", "Products")
                                         <ul class="hidden">
-                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Products", "IndexProducts", "Products")</div></li>
-                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Adjustment", "IndexProductAdjust", "ProductAdjust")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Tools & Machines", "IndexProducts", "Products")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Stock Adjustment", "IndexProductAdjust", "ProductAdjust")</div></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -112,7 +112,7 @@
                                     <div class="menutext">
                                         @Html.ActionLink("Payment", "IndexWageTeachnician", "WageTeachnician")
                                         <ul class="hidden">
-                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Technician", "IndexWageTeachnician", "WageTeachnician")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Alpha & Outsource", "IndexWageTeachnician", "WageTeachnician")</div></li>
                                             @*<li class="menuli"><div class="submenua">@Html.ActionLink("Vendor", "IndexWageVendor", "WageVendor")</div></li>*@
                                         </ul>
                                     </div>
@@ -123,9 +123,9 @@
                                     <div class="menutext">
                                         @Html.ActionLink("Report", "IndexReportBreakDownCost", "ReportBreakdownCost")
                                         <ul class="hidden">
-                                            <li class="menuli"><div class="submenua">@Html.ActionLink("ReportBDC", "IndexReportBreakDownCost", "ReportBreakdownCost")</div></li>
-                                            <li class="menuli"><div class="submenua">@Html.ActionLink("ReportJobOrder", "IndexReportJobOrder", "ReportJobOrder")</div></li>
-                                            <li class="menuli"><div class="submenua">@Html.ActionLink("ReportBorrow", "IndexRptBorrow", "ReportBorrow")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("BreakDownCost", "IndexReportBreakDownCost", "ReportBreakdownCost")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("JobOrder", "IndexReportJobOrder", "ReportJobOrder")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Borrow & Return", "IndexRptBorrow", "ReportBorrow")</div></li>
                                         </ul>
                                     </div>
                                 </div>
