--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -122,10 +122,10 @@ $(document).ready(function () {
             <th class="Rowpointer">No.</th>
             <th class="hidecolumn Rowpointer">ID</th>
             <th class="Rowpointer">JobNo</th>
-            <th class="Rowpointer">TypeWorkingName</th>
+            <th class="Rowpointer">Type of Working</th>
             <th class="Rowpointer">JobDate</th>
-            <th class="Rowpointer">SWorking</th>
-            <th class="Rowpointer">EWorking</th>
+            <th class="Rowpointer">Start Working</th>
+            <th class="Rowpointer">End Working</th>
             <th></th>
         </tr>
     </thead>
